# axl-template

./: .editorconfig  .gitignore  .pylintrc  CHANGELOG.md  Dockerfile  LICENSE  MANIFEST.in  Pipfile  README.md  build.sh  docker-build.yml  init-drupal  init-gitlab  init-lando  init-renovate  requirements.txt  setup.cfg  setup.py
.github/workflows/: docker-build.yml  pythonpackage.yml  pythonpublish.yml
axltempl/: click_types.py  click_types_test.py  composer.py  drupal.py  gitlab.py  lando.py  renovate.py  util.py
axltempl/files/drupal/: .env.example  .gitignore.template  composer.json  drush.yml  load.environment.php  renovate.json  settings.env.php
axltempl/files/gitlab/: ci.sh  gitlab-ci.yml  settings.local.php
axltempl/files/lando/: lando.memcache.php  lando.redis.php  lando.yml  settings.lando.php
axltempl/files/renovate/: config.js  renovate.json  renovate.yml
