[metadata]
name = axl-template
version = 0.5.0
description = Scaffold a Drupal site template
long_description = file: README.md
keywords = drupal
license = MIT
license_files = LICENSE
classifiers =
    Development Status :: 4 - Beta
    Intended Audience :: Developers
    Topic :: Software Development :: Build Tools
    Programming Language :: Python :: 3
author = hussainweb
author_email = hussainweb@gmail.com
url = https://github.com/axelerant/axl-template

[options]
include_package_data = True
packages = find:
install_requires =
    Click
python_requires = >=3.6

[options.entry_points]
console_scripts =
    init-drupal=axltempl.drupal:main
    init-gitlab=axltempl.gitlab:main
    init-lando=axltempl.lando:main
